Simplify with new API cleanups from Java 19 preview
The new API is less verbose so encourages allocating from the most
appropriate memory session. As a result the main memory sessions are now
only used for the upcalls, and of course cleanup of the OpenSSL
resources for contexts and engines. Trivial local allocations are from
confined sessions with single allocations.
Review by Maurizio Cimadamore.